--- a/05 - Flex Panel Gallery/Final Code/style.css
+++ b/05 - Flex Panel Gallery/Final Code/style.css
@@ -17,6 +17,7 @@ body {
 }
 
 .panels {
+  display: flex;
   min-height: 100vh;
   overflow: hidden;
 }
@@ -34,6 +35,11 @@ body {
   font-size: 20px;
   background-size: cover;
   background-position: center;
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .panel1 {
@@ -57,6 +63,23 @@ body {
   margin: 0;
   width: 100%;
   transition: transform 0.5s;
+  flex: 1 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.panel > *:first-child {
+  transform: translateY(-100%);
+}
+.panel.open-active > *:first-child {
+  transform: translateY(0);
+}
+.panel > *:last-child {
+  transform: translateY(100%);
+}
+.panel.open-active > *:last-child {
+  transform: translateY(0);
 }
 
 .panel p {
@@ -71,5 +94,6 @@ body {
 }
 
 .panel.open {
+  flex: 5;
   font-size: 40px;
 }
