--- a/02 - JS and CSS Clock/Final Code/style.css
+++ b/02 - JS and CSS Clock/Final Code/style.css
@@ -18,12 +18,12 @@ body {
 .clock {
   width: 30rem;
   height: 30rem;
-  border: 20px solid white;
+  border: 20px solid rgb(134, 8, 8);
   border-radius: 50%;
   margin: 50px auto;
   position: relative;
   padding: 2rem;
-  box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1), inset 0 0 0 3px #efefef,
+  box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1), inset 0 0 0 3px #000000,
     inset 0 0 10px black, 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
@@ -44,4 +44,87 @@ body {
   transform: rotate(90deg);
   transform: all 0.05s;
   transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+}
+
+.center-circle {
+  position: absolute;
+  top: 48%;
+  right: 47%;
+  bottom: 48%;
+  left: 47%;
+  color: white;
+  background: black;
+  border: thick solid black;
+  border-radius: 50%;
+  height: 1rem;
+  width: 1rem;
+}
+
+.ticks {
+  .tick {
+    position: absolute;
+    background: black;
+  }
+  .three {
+    top: 0%;
+    right: 0;
+    left: 1600%;
+    bottom: 0;
+    height: 8px;
+    width: 20px;
+  }
+  .six {
+    width: 8px;
+    height: 20px;
+    bottom: 1600%;
+  }
+  .nine {
+    height: 8px;
+    width: 20px;
+    right: 1600%;
+  }
+  .twelve {
+    width: 8px;
+    height: 20px;
+    top: 1600%;
+  }
+}
+
+.numbers {
+  .number {
+    position: absolute;
+    height: 1em;
+    width: 1em;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+  }
+
+  .twelve {
+    top: 0.25em;
+    right: 47%;
+    bottom: 95%;
+    left: 47%;
+  }
+
+  .three {
+    top: 48%;
+    right: 0%;
+    bottom: 48%;
+    left: 94%;
+  }
+
+  .six {
+    top: 95%;
+    right: 47%;
+    bottom: 1em;
+    left: 48%;
+  }
+
+  .nine {
+    top: 48%;
+    right: 0%;
+    bottom: 48%;
+    left: 0%;
+  }
 }
